--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.2",
+    "@angular/animations": "^7.2.15",
     "@angular/cdk": "^8.1.2",
     "@angular/common": "^7.0.2",
     "@angular/compiler": "^7.0.2",
@@ -32,10 +32,16 @@
     "@angular/service-worker": "^7.0.2",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "@types/jquery": "^3.3.6",
+    "bootstrap": "4.1.1",
     "core-js": "^2.5.4",
     "firebase": "^5.5.6",
     "firebase-admin": "^8.3.0",
     "firebase-functions": "^3.2.0",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "ngx-bootstrap": "^5.1.1",
+    "ngx-date-picker": "0.0.24",
+    "ngx-toastr": "^10.1.0",
     "rxjs": "~6.3.3",
     "zone.js": "^0.8.26"
   },
