Testing Infinite Scroll
Still not working

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ngx-date-picker": "0.0.24",
     "ngx-toastr": "^10.1.0",
     "rxjs": "~6.3.3",
+    "tablesorter": "^2.31.1",
     "zone.js": "^0.8.26"
   },
   "engines": {
