--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^8.1.2",
+    "@angular/cdk": "^8.1.4",
     "@angular/common": "^7.0.2",
     "@angular/compiler": "^7.0.2",
-    "@angular/core": "^7.0.2",
+    "@angular/core": "^8.2.4",
     "@angular/fire": "^5.1.0",
     "@angular/forms": "^7.0.2",
     "@angular/http": "^7.0.2",
-    "@angular/material": "^8.1.2",
+    "@angular/material": "^8.1.4",
     "@angular/platform-browser": "^7.0.2",
     "@angular/platform-browser-dynamic": "^7.0.2",
     "@angular/platform-server": "^7.0.2",
@@ -51,7 +51,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "~7.0.3",
+    "@angular/cli": "^7.0.7",
     "@angular/compiler-cli": "^7.0.2",
     "@angular/language-service": "^7.0.2",
     "@cypress/webpack-preprocessor": "^2.0.1",
