--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@angular/service-worker": "^7.0.2",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "@types/jquery": "^3.3.6",
-    "bootstrap": "4.1.1",
+    "bootstrap": ">=4.3.1",
     "core-js": "^2.5.4",
     "firebase": "^5.5.6",
     "firebase-admin": "^8.3.0",
